Add PDF Editor: delete and reorder pages functionality

--- a/static/index.html
+++ b/static/index.html
@@ -21,9 +21,13 @@
             <p class="subtitle">Локальное сжатие PDF файлов без загрузки в облако</p>
             <div style="margin-top: 1rem; padding: 0.75rem; background: rgba(255,255,255,0.2); border-radius: 0.5rem;">
                 <p style="font-size: 0.9rem; margin: 0;">
-                    🔒 Нужна максимальная приватность? 
-                    <a href="/index-client-side.html" style="color: white; text-decoration: underline; font-weight: 600;">
-                        Попробуйте версию без отправки на сервер
+                    ✂️ <a href="/pdf-editor.html" style="color: white; text-decoration: underline; font-weight: 600;">
+                        PDF Редактор - удаление и перестановка страниц
+                    </a>
+                </p>
+                <p style="font-size: 0.9rem; margin: 0.5rem 0 0 0;">
+                    🔒 <a href="/index-client-side.html" style="color: white; text-decoration: underline;">
+                        Версия без отправки на сервер (сжатие в браузере)
                     </a>
                 </p>
             </div>
